packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_invalid_references.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 971
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';

const I1 = 12;
const [I2, {I3, v1: [I4], I5=v2, ...I6}, I7=v3, ...I8] = obj;
function I9() {}
class I10 {}

export const App = component$(({count}) => {
	console.log(I1, I2, I3, I4, I5, I6, I7, I8, I9);
	console.log(itsok, v1, v2, v3, obj);
	return $(() => {
		return (
			<I10></I10>
		)
	});
})

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAQA,OAAO,MAAM,oBAAM,6CAQjB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_1_w0t0o3QMovU = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_1_w0t0o3QMovU"), "App_component_1_w0t0o3QMovU");
//
const I1 = 12;
const [I2, { I3, v1: [I4], I5 = v2, ...I6 }, I7 = v3, ...I8] = obj;
function I9() {}
export const App_component_ckEPmXZlub0 = (_rawProps)=>{
    console.log(I1, I2, I3, I4, I5, I6, I7, I8, I9);
    console.log(itsok, v1, v2, v3, obj);
    return _qrl_App_component_1_w0t0o3QMovU;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;MAGM,KAAK;MACL,CAAC,IAAI,EAAC,EAAE,EAAE,IAAI,CAAC,GAAG,EAAE,KAAG,EAAE,EAAE,GAAG,IAAG,EAAE,KAAG,EAAE,EAAE,GAAG,GAAG,GAAG;AACzD,SAAS,MAAM;yCAGe;IAC7B,QAAQ,GAAG,CAAC,IAAI,IAAI,IAAI,IAAI,IAAI,IAAI,IAAI,IAAI;IAC5C,QAAQ,GAAG,CAAC,OAAO,IAAI,IAAI,IAAI;IAC/B;AAKD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    189,
    346
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
class I10 {
}
export const App_component_1_w0t0o3QMovU = ()=>{
    return /*#__PURE__*/ _jsxSorted(I10, null, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAMA,MAAM;AAAK;2CAKD;IACR,qBACC,WAAC;AAEH\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    302,
    342
  ]
}
*/
== DIAGNOSTICS ==

[]
