packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_jsx_keyed_dev.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2467
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<>
			<Cmp key="stuff"></Cmp>
			<Cmp></Cmp>
			<Cmp prop="23"></Cmp>
			<Cmp prop="23" key={props.stuff}></Cmp>
			<p key={props.stuff}>Hello Qwik</p>
		</>
	);
});

============================= project/index.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const _qrl_App_component_KGLYFBhvJc0 = /*#__PURE__*/ qrlDEV(()=>import("./index.tsx_App_component_KGLYFBhvJc0.js"), "App_component_KGLYFBhvJc0", {
    file: "/src/project/project/index.tsx",
    lo: 88,
    hi: 283,
    displayName: "index.tsx_App_component"
});
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_KGLYFBhvJc0);


Some("{\"version\":3,\"sources\":[\"/src/project/project/index.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;AAGA,OAAO,MAAM,oBAAM,6CAUhB\"}")
============================= project/index.tsx_App_component_KGLYFBhvJc0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_KGLYFBhvJc0 = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted(Cmp, null, null, null, 3, "stuff", {
            fileName: "project/index.tsx",
            lineNumber: 7,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted(Cmp, null, null, null, 3, "Q6_0", {
            fileName: "project/index.tsx",
            lineNumber: 8,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted(Cmp, null, {
            prop: "23"
        }, null, 3, "Q6_1", {
            fileName: "project/index.tsx",
            lineNumber: 9,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted(Cmp, null, {
            prop: "23"
        }, null, 3, props.stuff, {
            fileName: "project/index.tsx",
            lineNumber: 10,
            columnNumber: 4
        }),
        /*#__PURE__*/ _jsxSorted("p", null, null, "Hello Qwik", 3, props.stuff, {
            fileName: "project/index.tsx",
            lineNumber: 11,
            columnNumber: 4
        })
    ], 1, "Q6_2", {
        fileName: "project/index.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
};


Some("{\"version\":3,\"sources\":[\"/src/project/project/index.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,CAAC;IAC9B,qBACC;sBACC,WAAC,0BAAQ;;;;;sBACT,WAAC;;;;;sBACD,WAAC;YAAI,MAAK;;;;;;sBACV,WAAC;YAAI,MAAK;oBAAU,MAAM,KAAK;;;;;sBAC/B,WAAC,iBAAoB,iBAAb,MAAM,KAAK;;;;;;;;;;AAGtB\"}")
/*
{
  "origin": "project/index.tsx",
  "name": "App_component_KGLYFBhvJc0",
  "entry": null,
  "displayName": "index.tsx_App_component",
  "hash": "KGLYFBhvJc0",
  "canonicalFilename": "index.tsx_App_component_KGLYFBhvJc0",
  "path": "project",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    88,
    283
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
